# XFoli-AI

./: .gitignore  BACKEND_ENV_SETUP.md  BACKEND_OPTIMIZATIONS.md  BACKEND_RENDER_DEPLOYMENT.md  DEBUG_EMAIL_CONFIRMATION.md  DEPLOYMENT_CHECKLIST.md  EMAIL_SETUP_GUIDE.md  FRONTEND_OPTIMIZATIONS.md  FRONTEND_VERCEL_DEPLOYMENT.md  PLAN.md  README.md  REPOSITORY_SETUP.md  SUPABASE_USER_DELETION_SETUP.md  UPDATED_REDIRECT_URLS.md
backend/: pyproject.toml  render_build.sh  render_start.sh  run_dev.py
backend/app/: main.py
backend/app/api/: account.py  agent.py  portfolios.py  search.py
backend/app/auth/: security.py
backend/app/database/: models.py  session.py
backend/app/models/: holding.py  portfolio.py  supported_ticker.py
backend/app/scripts/: ticker-script.py
backend/app/services/: agent_service.py  finnhub_service.py
frontend/: ISSUES_RESOLVED.md  README-dashboard.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/signin/: layout.tsx  page.tsx
frontend/app/(auth)/signup/: layout.tsx  page.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/(marketing)/disclaimer/: page.tsx
frontend/app/(marketing)/faq/: page.tsx
frontend/app/(marketing)/features/: page.tsx
frontend/app/(marketing)/terms/: page.tsx
frontend/app/auth/auth-code-error/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/auth/confirm/: route.ts
frontend/app/components/: Timestamp.tsx
frontend/app/components/ui/: Button.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/lib/: api.ts
(+3 files in other folders)
